Welcome New Team Members!

--- a/people.html
+++ b/people.html
@@ -78,8 +78,7 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/zhufeng.jpg" alt="">
                     <h4>Feng Zhu</h4>
-                    <p>zfonemore AT foxmail.com <br>
-                    (2021, co-supervised stu @ UTS)</p>
+                    <p>(2021, co-supervised stu @ UTS)</p>
                 </div>
             </div>
             
@@ -87,8 +86,7 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/yanda.jpg" alt="">
                     <h4>Yanda Li</h4>
-                    <p>yanda95 AT foxmail.com <br>
-                    (2021, co-supervised stu @ UTS)</p>
+                    <p>(2021, co-supervised stu @ UTS)</p>
                 </div>
             </div>
 
@@ -96,8 +94,7 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/gengwei.jpg" alt="">
                     <h4>Gengwei Zhang</h4>
-                    <p>zgwdavid AT gmail.com <br>
-                    (2021, co-supervised stu @ UTS)</p>
+                    <p>(2021, co-supervised stu @ UTS)</p>
                 </div>
             </div>
 
@@ -105,8 +102,7 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/shiyin.jpg" alt="">
                     <h4>Shiyin Zhang</h4>
-                    <p>shiyinzhang AT bjtu.edu.cn <br>
-                    (2017, co-supervised stu)</p>
+                    <p>(2017, co-supervised stu)</p>
                 </div>
             </div>
         </div>
@@ -117,8 +113,7 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/kunyang.png" alt="">
                     <h4>Kunyang Han</h4>
-                    <p>kunyanghan AT bjtu.edu.cn <br>
-                    (2022, co-supervised stu)</p>
+                    <p>(2022, co-supervised stu)</p>
                 </div>
             </div>
 
@@ -126,17 +121,15 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/fangyan.png" alt="">
                     <h4>Yan Fang</h4>
-                    <p>yfang0819 AT outlook.com <br>
-                    (2022)</p>
+                    <p>(2022)</p>
                 </div>
             </div>
 
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/zhongwei2.jpg" alt="">
+                    <img class="student-img" src="images/people/zhongwei.jpg" alt="">
                     <h4>Zhongwei Ren</h4>
-                    <p>18281272 AT bjtu.edu.cn <br>
-                    (2022)</p>
+                    <p>(2022)</p>
                 </div>
             </div>
 
@@ -144,8 +137,33 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/mengxue.jpeg" alt="">
                     <h4>Mengxue Qu</h4>
-                    <p>qumengxue AT bjtu.edu.cn <br>
-                    (2022, co-supervised stu)</p>
+                    <p>(2022, co-supervised stu)</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/yuyang_yin.jpg" alt="">
+                    <h4>Yuyang Yin</h4>
+                    <p>(2023)</p>
+                </div>
+            </div>
+
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/mengyu_wang.png" alt="">
+                    <h4>Mengyu Wang</h4>
+                    <p>(2023)</p>
+                </div>
+            </div>
+
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/yiming_zhong.jpg" alt="">
+                    <h4>Yiming Zhong</h4>
+                    <p>(2023)</p>
                 </div>
             </div>
         </div>
@@ -167,17 +185,15 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/siyu.jpg" alt="">
                     <h4>Siyu Jiao</h4>
-                    <p>21120325 AT bjtu.edu.cn <br>
-                    (2021, co-supervised stu)</p>
+                    <p>(2021, co-supervised stu)</p>
                 </div>
             </div>
 
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/qiqi.jpeg" alt="">
+                    <img class="student-img" src="images/people/qiqi_gong.jpg" alt="">
                     <h4>Qiqi Gong</h4>
-                    <p>gongqq AT bjtu.edu.cn <br>
-                    (2021, co-supervised stu)</p>
+                    <p>(2021, co-supervised stu)</p>
                 </div>
             </div>
 
@@ -185,8 +201,7 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/zilin.jpeg" alt="">
                     <h4>Zilin Wang</h4>
-                    <p>21120306 AT bjtu.edu.cn <br>
-                    (2021, co-supervised stu)</p>
+                    <p>(2021, co-supervised stu)</p>
                 </div>
             </div>
 
@@ -194,8 +209,7 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/yihan.jpeg" alt="">
                     <h4>Yihan Hu</h4>
-                    <p>18281128hyh AT gmail.com <br>
-                    (2022)</p>
+                    <p>(2022)</p>
                 </div>
             </div>
         </div>      
@@ -205,8 +219,75 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/haojie.jpg" alt="">
                     <h4>Haojie Ding</h4>
-                    <p>haojieding5 AT gmail.cn <br>
-                    (2022)</p>
+                    <p>(2022)</p>
+                </div>
+            </div>
+
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/weiqi_jin.jpg" alt="">
+                    <h4>Weiqi Jin</h4>
+                    <p>(2022, co-supervised stu)</p>
+                </div>
+            </div>
+
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/xinhao_zhong.jpg" alt="">
+                    <h4>Xinhao Zhong</h4>
+                    <p>(2022)</p>
+                </div>
+            </div>
+            
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/chenyi_zhang.jpg" alt="">
+                    <h4>Chenyi Zhang</h4>
+                    <p>(2022)</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/qian_yang.jpg" alt="">
+                    <h4>Qian Yang</h4>
+                    <p>(2022)</p>
+                </div>
+            </div>
+
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/wenxin_chen.jpg" alt="">
+                    <h4>Wenxin Chen</h4>
+                    <p>(2023)</p>
+                </div>
+            </div>
+
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/jingxuan_xu.jpg" alt="">
+                    <h4>Jingxuan Xu</h4>
+                    <p>(2023)</p>
+                </div>
+            </div>
+
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/shifang_zhao.jpg" alt="">
+                    <h4>Shifang Zhao</h4>
+                    <p>(2023)</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/yiheng_lin.png" alt="">
+                    <h4>Yiheng Lin</h4>
+                    <p>(2023, co-supervised stu)</p>
                 </div>
             </div>
         </div>
