seminar regular update

--- a/seminar.html
+++ b/seminar.html
@@ -109,12 +109,6 @@
                     </thead>
                     <tbody> 
                         <tr>
-                            <td>Oct. 9</td> 
-                            <td>Zhongwei Ren <br>Feng Zhu</td>
-                            <td>BJTU <br> UTS</td>
-                            <td>Paper Sharing (TBA)</td>
-                        </tr>
-                        <tr>
                             <td>Oct. 16</td>
                             <td>Siyu Jiao <br>Xinhao Zhong</td>
                             <td>BJTU</td>
@@ -180,6 +174,17 @@
                     <tbody> 
                         <!-- [<a href="">pdf</a>] -->
 
+                        <tr>
+                            <td>Oct. 9</td> 
+                            <td>Zhongwei Ren <br>Feng Zhu</td>
+                            <td>BJTU <br> UTS</td>
+                            <td>
+                                BATMAN: Bilateral Attention Transformer in Motion-Appearance Neighboring Space for Video Object Segmentation
+                                [<a href="./seminar/10.9_seminar_batman_zhongwei.pdf">pdf</a>] <br>
+                                Rethinking Resolution in the Context of Efficient Video Recognition
+                                [<a href="./seminar/efficient_video_recognition_fengzhu.pdf">pdf</a>]
+                            </td>
+                        </tr>
                         <tr>
                             <td>Sep. 25</td>
                             <td>Haojie Ding</td>
