--- a/publication.html
+++ b/publication.html
@@ -203,23 +203,27 @@
                 <strong> Mask Matching Transformer for Few-Shot Segmentation </strong> <br>
                 Siyu Jiao, Gengwei Zhang, Shant Navasardyan, Ling Chen, Yao Zhao, <strong>Yunchao Wei</strong>, Humphrey Shi<br>
                 Neural Information Processing Systems (<strong>NeurIPS</strong>), 2022
+                <a href="https://github.com/jsyyyyyyyy/mmformer">[CODE]</a>
+                <a href="https://cl-bjtu.github.io/achievement.html">[中文简介]</a><br>
             </li>
             <li>
                 <strong>Mining Unseen Classes via Regional Objectness: A Simple Baseline for Incremental Segmentation</strong> <br>
                 Zekang Zhang, Guangyu Gao, Zhiyuan Fang, Jianbo Jiao, <strong>Yunchao Wei</strong> <br>
                 Neural Information Processing Systems (<strong>NeurIPS</strong>), 2022
+                <a href="https://github.com/zkzhang98/MicroSeg">[CODE]</a>
+                <a href="https://cl-bjtu.github.io/achievement.html">[中文简介]</a><br>
             </li>
              <li>
                 <strong>SiRi: A Simple Selective Retraining Mechanism for Transformer-based Visual Grounding</strong><br/>
                 Mengxue Qu, Yu Wu, Wu Liu, Qiqi Gong, Xiaodan Liang, Olga Russakovsky, Yao Zhao, <strong>Yunchao Wei</strong><br/>
                 European Conference on Computer Vision (<strong>ECCV</strong>), 2022
-                <a href="https://arxiv.org/abs/2207.13325">[PDF]</a>
+                <a href="https://github.com/qumengxue/siri-vg">[CODE]</a><a href="https://arxiv.org/abs/2207.13325">[PDF]</a>
              </li>
              <li>
                 <strong>Instance As Identity: A Generic Online Paradigm for Video Instance Segmentation</strong><br/>
                 Feng Zhu, Zongxin Yang, Xin Yu, Yi Yang, <strong>Yunchao Wei</strong><br/>
                 European Conference on Computer Vision (<strong>ECCV</strong>), 2022
-                
+                <a href="https://github.com/zfonemore/IAI">[CODE]</a><a href="https://arxiv.org/abs/2208.03079">[PDF]</a><br>
              </li>
              <li>
                 <strong>Slim Scissors: Segmenting Thin Object from Synthetic Background</strong><br/>
