--- a/publication.html
+++ b/publication.html
@@ -197,10 +197,19 @@
 
         <h4 class="title"> Conference Proceedings </h4>
     
+         <h3 class="title subtitle"> 2023 </h3>
+        <ol>
+            <li>
+                <strong>Progressive Neighborhood Aggregation for Semantic Segmentation Refinement</strong> <br>
+                Ting Liu, <strong>Yunchao Wei</strong>, Yanning Zhang<br>
+                Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2023
+            </li>
+        </ol>
+    
         <h3 class="title subtitle"> 2022 </h3>
         <ol>
             <li>
-                <strong> Mask Matching Transformer for Few-Shot Segmentation </strong> <br>
+                <strong>Mask Matching Transformer for Few-Shot Segmentation</strong> <br>
                 Siyu Jiao, Gengwei Zhang, Shant Navasardyan, Ling Chen, Yao Zhao, <strong>Yunchao Wei</strong>, Humphrey Shi<br>
                 Neural Information Processing Systems (<strong>NeurIPS</strong>), 2022
                 <a href="https://github.com/jsyyyyyyyy/mmformer">[CODE]</a>
