--- a/publication.html
+++ b/publication.html
@@ -95,6 +95,15 @@
         <h4 class="title"> Selected Journal Articles </h4>
         <ol>
             <li>
+                <strong>Interactive Object Segmentation with Inside-Outside Guidance</strong><br/>
+                Shiyin Zhang, Shikui Wei, Jun Hao Liew, Kunyang Han, Yao Zhao，<strong>Yunchao Wei</strong><br/>
+                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2023 
+                <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Zhang_Interactive_Object_Segmentation_With_Inside-Outside_Guidance_CVPR_2020_paper.pdf">[PDF]</a>
+                <a href="https://github.com/shiyinzhang/Inside-Outside-Guidance">[Code]</a>
+                <a href="https://youtu.be/DevkxIo-hi8">[Youtube]</a><a
+                    href="https://www.bilibili.com/video/BV1Pf4y1R7w8/">[Bilibili]</a>
+            </li>
+            <li>
                 <strong>
                     Online Attention Accumulation for Weakly Supervised Semantic Segmentation.
                 </strong> <br>
