--- a/index.html
+++ b/index.html
@@ -193,6 +193,13 @@
             <h3 class="title">News</h3>
             <div class="history-tl-container">
                 <ul class="tl">
+                     <li class="tl-item" ng-repeat="item in retailer_history">
+
+                        <div class="item-title">[ PAPER ]</div>
+                        <div class="item-detail"> The extension of <a href="https://github.com/shiyinzhang/Inside-Outside-Guidance">IOG</a> is accepted by TPAMI, congrats to Shiyin & Kunyang.
+
+                        </div>
+                    </li>
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[ PAPER ]</div>
