--- a/seminar.html
+++ b/seminar.html
@@ -109,43 +109,7 @@
                     </thead>
                     <tbody> 
                         <tr>
-                            <td>Oct. 16</td>
-                            <td>Siyu Jiao <br>Xinhao Zhong</td>
-                            <td>BJTU</td>
-                            <td>Paper Sharing (TBA)</td>
-                        </tr>
-                        <tr>
-                            <td>Oct. 23</td>
-                            <td>Qiqi Gong <br>Ziling Wang</td>
-                            <td>BJTU</td>
-                            <td>Paper Sharing (TBA)</td>
-                        </tr>
-                        <tr>
-                            <td>Oct. 30</td>
-                            <td>Hongguang Zhu <br>Weiqi Jin</td>
-                            <td>BJTU</td>
-                            <td>Paper Sharing (TBA)</td>
-                        </tr>
-                        <tr>
-                            <td>Nov. 6</td>
-                            <td>Yihan Hu <br>Yan Fang</td>
-                            <td>BJTU</td>
-                            <td>Paper Sharing (TBA)</td>
-                        </tr>
-                        <tr>
-                            <td>Nov. 13</td>
-                            <td>Qian Yang <br>Chenyi Zhang</td>
-                            <td>BJTU</td>
-                            <td>Paper Sharing (TBA)</td>
-                        </tr>
-                        <tr>
-                            <td>Nov. 20</td>
-                            <td>Yanda Li <br>Gengwei Zhang</td>
-                            <td>UTS</td>
-                            <td>Paper Sharing (TBA)</td>
-                        </tr>
-                        <tr>
-                            <td>Nov. 27</td>
+                            <td>Dec. 11</td>
                             <td>Zekang Zhang <br>Shiyin Zhang</td>
                             <td>BIT <br>BJTU</td>
                             <td>Paper Sharing (TBA)</td>
@@ -173,7 +137,81 @@
                     </thead>
                     <tbody> 
                         <!-- [<a href="">pdf</a>] -->
+                        <!-- <td>
+                            [<a href="">pdf</a>] <br>
+                            [<a href="">pdf</a>]
+                        </td> -->
 
+
+                        <tr>
+                            <td>Dec. 4</td>
+                            <td>Yanda Li <br>Zhongwei Ren <br>Yuyang Yin </td>
+                            <td>UTS <br> BJTU <br> BJTU</td>
+                            <td>
+                                Diffusion Model
+                                [<a href="./seminar/12_4_diffusion_yanda.pdf">pdf</a>] <br>
+                                Segmentation with diffusion
+                                [<a href="./seminar/12_4_diffusion_seminar_zhongwei.pdf">pdf</a>] <br>
+                                Diffusion Application on low-level vision
+                                [<a href="./seminar/12.4Diffusion_Application_on_low-level_vision_yuyang.pdf">pdf</a>]
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>Nov. 27</td>
+                            <td>Yan Fang <br>Yihan Hu</td>
+                            <td>BJTU</td>
+                            <td>
+                                Learning from Future: A Novel Self-Training Framework for Semantic Segmentation
+                                [<a href="./seminar/Nov27Pre_fangyan.pdf">pdf</a>] <br>
+                                XMem: Long-Term Video Object Segmentation with an Atkinson-Shiffrin Memory Model
+                                [<a href="./seminar/XMem_yihan.pdf">pdf</a>]
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Nov. 20</td>
+                            <td>Chenyi Zhang <br>Qian Yang</td>
+                            <td>BJTU</td>
+                            <td>
+                                Reviving Iterative Training with Mask Guidance for Interactive Segmentation
+                                [<a href="./seminar/22-10-20_chenyi.pdf">pdf</a>]
+                                Fine-Grained Entity Segmentation
+                                [<a href="./seminar/22-10-20_yangqian.pdf">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Oct. 30</td>
+                            <td>Hongguang Zhu <br>Weiqi Jin</td>
+                            <td>BJTU</td>
+                            <td>
+                                Unsupervised Visual Representation Learning by Synchronous Momentum Grouping
+                                [<a href="./seminar/SMoG_hongguang.pdf">pdf</a>] <br>
+                                Effective Adaptation in Multi-Task Co-Training for Unified Autonomous Driving
+                                [<a href="./seminar/LV-Adapter_weiqi.pdf">pdf</a>]
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Oct. 23</td>
+                            <td>Qiqi Gong <br>Ziling Wang</td>
+                            <td>BJTU</td>
+                            <td>
+                                CP<sup>2</sup>: Copy-Paste Contrastive Pretraining for Semantic Segmentation
+                                [<a href="./seminar/20221023_CP^2_qiqi.pdf">pdf</a>] <br>
+                                Bi-directional Contrastive Learning for Domain Adaptive Semantic Segmentation
+                                [<a href="./seminar/20221023_zilin.pdf">pdf</a>]
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Oct. 16</td>
+                            <td>Siyu Jiao <br>Xinhao Zhong</td>
+                            <td>BJTU</td>
+                            <td>
+                                VITA: Video Instance Segmentation via Object Token Association
+                                [<a href="./seminar/VITA_siyu.pdf">pdf</a>] <br>
+                                Accelerating DETR Convergence via Semantic-Aligned Matching
+                                [<a href="./seminar/SAM-DETR_xinhao.pdf">pdf</a>]
+                            </td>
+                        </tr>
                         <tr>
                             <td>Oct. 9</td> 
                             <td>Zhongwei Ren <br>Feng Zhu</td>
