--- a/people.html
+++ b/people.html
@@ -135,7 +135,7 @@
 
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/mengxue.jpeg" alt="">
+                    <img class="student-img" src="images/people/mengxue.jpg" alt="">
                     <h4>Mengxue Qu</h4>
                     <p>(2022, co-supervised stu)</p>
                 </div>
