--- a/index.html
+++ b/index.html
@@ -193,6 +193,13 @@
             <h3 class="title">News</h3>
             <div class="history-tl-container">
                 <ul class="tl">
+                    <li class="tl-item" ng-repeat="item in retailer_history">
+
+                        <div class="item-title">[ PAPER ]</div>
+                        <div class="item-detail">We have six accepted papers, including one AAAI 2023, four CVPR 2023 and one TPAMI.
+
+                        </div>
+                    </li>
                      <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[ PAPER ]</div>
