--- a/publication.html
+++ b/publication.html
@@ -102,6 +102,17 @@
                 IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2023
                <br>
             </li>
+            
+            <li>
+                <strong>
+                    Credible Dual-Expert Learning for Weakly Supervised Semantic Segmentation
+                </strong> <br>
+                Bingfeng Zhang, Jimin Xiao, <strong>Yunchao Wei</strong>, Yao Zhao<br>
+                International Journal of Computer Vision (<strong>IJCV</strong>), 2023
+               <br>
+            </li>
+            <li>
+            
             <li>
                 <strong>Interactive Object Segmentation with Inside-Outside Guidance</strong><br/>
                 Shiyin Zhang, Shikui Wei, Jun Hao Liew, Kunyang Han, Yao Zhao，<strong>Yunchao Wei</strong><br/>
