--- a/seminar.html
+++ b/seminar.html
@@ -109,10 +109,181 @@
                     </thead>
                     <tbody> 
                         <tr>
-                            <td>Dec. 11</td>
-                            <td>Zekang Zhang <br>Shiyin Zhang</td>
-                            <td>BIT <br>BJTU</td>
+                            <td>Aug. 27</td>
+                            <td>Yanda Li <br> Yuyang Yin <br> Feng Zhu</td>
+                            <td>UTS <br> BJTU <br> UTS</td>
                             <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Aug. 20</td>
+                            <td>Zhongwei Ren <br>Weizhe Liu </td>
+                            <td>BJTU</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Aug. 13</td>
+                            <td>Weiqi Jin <br>Qiqi Gong </td>
+                            <td>BJTU</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Aug. 6</td>
+                            <td>Siyu Jiao <br>Mengxue Qu </td>
+                            <td>BJTU</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Jul. 30</td>
+                            <td>Zilin Wang <br>Zekang Zhang </td>
+                            <td>BJTU <br> BIT </td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Jul. 23</td>
+                            <td>Mengyu Wang <br>Honguang Zhu </td>
+                            <td>BJTU</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Jul. 16</td>
+                            <td>Yiming Zhong <br>Haojie Ding </td>
+                            <td>BJTU</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Jul. 9</td>
+                            <td>Yan Fang <br>Qian Yang </td>
+                            <td>BJTU</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Jul. 2</td>
+                            <td>Yiheng Lin <br>Xinhao Zhong </td>
+                            <td>BJTU</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <!-- <tr>
+                            <td>Apr. 17</td>
+                            <td>Zhiyuan Fang <br> Zekang Zhang</td>
+                            <td>BIT</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr> -->
+                    </tbody>
+                </table>
+            </div>
+
+            <h4 class="title">Finished Presentations, 2023</h4>
+            <div class="contents">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col" class="date"> Date</th>
+                        <th scope="col" class="presenter"> Presenter</th>
+                        <th scope="col" class="affiliation"> Affiliation</th>
+                        <th scope="col" class="topic"> Paper or topic</th>
+                    </tr>
+                    </thead>
+                    <tbody> 
+                        <tr>
+                            <td>Jun. 25</td>
+                            <td>Jialong Sun <br> Chenyi Zhang </td>
+                            <td>BJTU</td>
+                            <td>
+                                VanillaNet: the Power of Minimalism in Deep Learning
+                                [<a href="./seminar/vanillanet_jialong_6_25.pdf">pdf</a>] <br>
+                                Fast Segment Anything
+                                [<a href="./seminar/Fast SAM_seminar.pdf">pdf</a>]
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Jun. 18</td>
+                            <td>Jingxuan Xu <br> Wenxin Chen </td>
+                            <td>BJTU</td>
+                            <td>
+                                Generic-to-Specific Distillation of Masked Autoencoders
+                                [<a href="./seminar/seminar_2023.6.18_xjx.pdf">pdf</a>] <br>
+                                SOOD: Towards Semi-Supervised Oriented Object Detection
+                                [<a href="./seminar/SOOD_wenxin_6_18.pdf">pdf</a>]
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>May. 21</td>
+                            <td>Shifang Zhao <br> Yihan Hu </td>
+                            <td>BJTU</td>
+                            <td>
+                                Towards Open-Vocabulary Video Instance Segmentation
+                                [<a href="./seminar/shifang_5_21.pdf">pdf</a>] <br>
+                                Imagic: Text-Based Real Image Editing with Diffusion Models
+                                [<a href="./seminar/Imagic_yihan_20230521.pdf">pdf</a>]
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Apr. 2</td>
+                            <td>Shifang Zhao </td>
+                            <td>BJTU</td>
+                            <td>
+                                Side Adapter Network for Open-Vocabulary Semantic Segmentation
+                                [<a href="./seminar/shifang_4_2.pdf">pdf</a>]
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Mar. 19</td>
+                            <td>Hongguang Zhu </td>
+                            <td>BJTU</td>
+                            <td>
+                                BLIP-2: Bootstrapping Language-Image Pre-training with Frozen Image Encoders and Large Language Models
+                                [<a href="./seminar/BLIPv2_hongguang_319.pdf">pdf</a>]
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Mar. 12</td>
+                            <td>Yuyang Yin <br> Kunyang Han </td>
+                            <td>BJTU</td>
+                            <td>
+                                Unsupervised Night Image Enhancement: When Layer Decomposition Meets Light-Effects Suppression
+                                [<a href="./seminar/yuyang_3_12.pdf">pdf</a>] <br>
+                                Enhanced Training of Query-Based Object Detection via Selective Query Recollection
+                                [<a href="./seminar/sqr_kunyang.pdf">pdf</a>]
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Mar. 5</td>
+                            <!-- mengyu -->
+                            <td>Yihan Hu </td> 
+                            <td>BJTU</td>
+                            <td>
+                                High-Resolution Image Synthesis with Latent Diffusion Models
+                                [<a href="./seminar/LDM_yihan.pdf">pdf</a>]
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Feb. 2</td>
+                            <td>Weiqi Jin </td>
+                            <td>BJTU</td>
+                            <td>
+                                Learning to Prompt for Vision-Language Models
+                                [<a href="./seminar/CoCoOp_weiqi_2.12.pdf">pdf</a>]
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Jan. 15</td>
+                            <td>Chenyi Zhang </td>
+                            <td>BJTU</td>
+                            <td>
+                                ONMI-DIMENSIONAL DYNAMIC CONVOLUTION
+                                [<a href="./seminar/Omni-Dimensional_chenyi_115.pdf">pdf</a>]
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Jan. 8</td>
+                            <td>Mengxue Qu <br> Jingxuan Xu </td>
+                            <td>BJTU</td>
+                            <td>
+                                Do DALL-E and Flamingo Understand Each Other?
+                                [<a href="./seminar/seminar_Do_DALL-E_and_Flamingo_Understand_Each_Other.pdf">pdf</a>] <br>
+                                The Forward-Forward Algorithm: Some Preliminary Investigations
+                                [<a href="./seminar/KDTT_Xujx_1_18.pdf">pdf</a>]
+                            </td>
                         </tr>
                         <!-- <tr>
                             <td>Apr. 17</td>
@@ -142,6 +313,28 @@
                             [<a href="">pdf</a>]
                         </td> -->
 
+
+                        <tr>
+                            <td>Dec. 18</td>
+                            <td>Siyu Jiao <br> Yiheng Lin </td>
+                            <td>BJTU</td>
+                            <td>
+                                Singular Value Fine-tuning: Few-shot Segmentation requires Few-parameters Fine-tuning
+                                [<a href="./seminar/SVF_siyu.pdf">pdf</a>] <br>
+                                The Forward-Forward Algorithm: Some Preliminary Investigations
+                                [<a href="./seminar/FFA_yiheng.pdf">pdf</a>]
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>Dec. 11</td>
+                            <td>Zekang Zhang </td>
+                            <td>BIT</td>
+                            <td>
+                                Forget-free Continual Learning with Winning Subnetworks
+                                [<a href="./seminar/1211_WSN.pdf">pdf</a>]
+                            </td>
+                        </tr>
 
                         <tr>
                             <td>Dec. 4</td>
@@ -174,9 +367,9 @@
                             <td>BJTU</td>
                             <td>
                                 Reviving Iterative Training with Mask Guidance for Interactive Segmentation
-                                [<a href="./seminar/22-10-20_chenyi.pdf">pdf</a>]
+                                [<a href="./seminar/22-10-20_chenyi.pdf">pdf</a>] <br>
                                 Fine-Grained Entity Segmentation
-                                [<a href="./seminar/22-10-20_yangqian.pdf">pdf</a>] <br>
+                                [<a href="./seminar/22-10-20_yangqian.pdf">pdf</a>]
                             </td>
                         </tr>
                         <tr>
