--- a/index.html
+++ b/index.html
@@ -196,6 +196,20 @@
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[ PAPER ]</div>
+                        <div class="item-detail">We have six accepted papers, including five CVPR 2023 and one TPAMI.
+
+                        </div>
+                    </li>
+                    <li class="tl-item" ng-repeat="item in retailer_history">
+
+                        <div class="item-title">[SERVICE]</div>
+                        <div class="item-detail">Will serve as Area Chairs for NeurIPS 2023 Track Datasets & Benchmarks and CVPR 2024.
+
+                        </div>
+                    </li>
+                    <li class="tl-item" ng-repeat="item in retailer_history">
+
+                        <div class="item-title">[ PAPER ]</div>
                         <div class="item-detail">We have seven accepted papers, including one AAAI 2023, four CVPR 2023，one IJCV and one TPAMI.
 
                         </div>
