--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[ PAPER ]</div>
-                        <div class="item-detail">We have six accepted papers, including five CVPR 2023 and one TPAMI.
+                        <div class="item-detail">We have six accepted papers, including five ICCV 2023 and one TPAMI.
 
                         </div>
                     </li>
