--- a/publication.html
+++ b/publication.html
@@ -98,7 +98,7 @@
                 <strong>
                     Entity-Graph Enhanced Cross-Modal Pretraining for Instance-level Product Retrieval
                 </strong> <br>
-                JXiao Dong, Xunlin Zhan, <strong>Yunchao Wei</strong>, Xiaoyong Wei, Yaowei Wang, Minlong Lu, Xiaochun Cao, Xiaodan Liang<br>
+                Xiao Dong, Xunlin Zhan, <strong>Yunchao Wei</strong>, Xiaoyong Wei, Yaowei Wang, Minlong Lu, Xiaochun Cao, Xiaodan Liang<br>
                 IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2023
                <br>
             </li>
