--- a/publication.html
+++ b/publication.html
@@ -237,6 +237,22 @@
         <ol>
             <li>
                 <strong>
+                    CLE Diffusion: Controllable Light Enhancement Diffusion Model
+                </strong> <br>              
+                   Yuyang Yin, Dejia Xu, Chuangchuang Tan, Ping Liu, Yao Zhao, <strong>Yunchao Wei</strong> <br>
+                      ACM Multimedia (<strong>MM</strong>), 2023
+                    <br>
+            </li>
+            <li>
+                <strong>
+                    Single-stage Multi-human Parsing via Point Sets and Center-based Offsets
+                </strong> <br>              
+                   Jiaming Chu, Lei Jin, Xiaojin Fan, Yinglei Teng, <strong>Yunchao Wei</strong> , Yuqiang Fang, Junliang Xing, Jian Zhao <br>
+                      ACM Multimedia (<strong>MM</strong>), 2023
+                    <br>
+            </li>
+            <li>
+                <strong>
                     Global Knowledge Calibration for Fast Open-Vocabulary Segmentation
                 </strong> <br>
                    Kunyang Han, Yong Liu, Jun Hao Liew, Henghui Ding, Jiajun Liu, Yitong Wang, Yansong Tang, Yujiu Yang, Jiashi Feng, Yao Zhao, <strong>Yunchao Wei</strong> <br>
@@ -467,7 +483,7 @@
                 <strong>Meta Parsing Networks: Towards Generalized Few-shot Scene Parsing with Adaptive Metric
                     Learning</strong><br/>
                 Peike Li, <strong>Yunchao Wei</strong>, Yi Yang<br/>
-                ACM Moltimedia (<strong>MM</strong>), 2020 (<span
+                ACM Multimedia (<strong>MM</strong>), 2020 (<span
                     style="color:#CB4335;"><strong>oral</strong></span>)<br/>
             </li>
 
@@ -475,7 +491,7 @@
                 <strong>University-1652: A Molti-view Molti-source Benchmark for Drone-based
                     Geo-localization</strong><br/>
                 Zhedong Zheng, <strong>Yunchao Wei</strong>, Yi Yang<br/>
-                ACM Moltimedia (<strong>MM</strong>), 2020
+                ACM Multimedia (<strong>MM</strong>), 2020
                 <a href="https://arxiv.org/abs/2002.12186">[arxiv]</a><a
                     href="https://github.com/layumi/University1652-Baseline">[Project]</a><br/>
                 <span style="color:#34495E;font-size:14px"><strong>Note:</strong> We annotate 1652 buildings in 72 universities around the world.</span>
