--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="center-row" style="font-size: 16px;">
 
                 <p>
-                    My research interests include computer vision and machine learning. In particular I have recently worked in:
+                    My research interests include computer vision and machine learning. In particular, I have recently worked in:
                 </p>
 
                 <ul id="interests">
@@ -196,7 +196,7 @@
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[ PAPER ]</div>
-                        <div class="item-detail">We have six accepted papers, including five ICCV 2023 and one TPAMI.
+                        <div class="item-detail">We have eight accepted papers, including five ICCV 2023，two ACM MM 2023 and one TPAMI.
 
                         </div>
                     </li>
