--- a/publication.html
+++ b/publication.html
@@ -236,6 +236,21 @@
          <h3 class="title subtitle"> 2023 </h3>
         <ol>
             <li>
+                <strong>SegRefiner: Towards Model-Agnostic Segmentation Refinement with Discrete Diffusion Process</strong> <br>
+                Mengyu Wang, Henghui Ding, Jun Hao Liew, Jiajun Liu, Yao Zhao, <strong>Yunchao Wei</strong><br>
+                Neural Information Processing Systems (<strong>NeurIPS</strong>), 2023
+            </li>
+            <li>
+                <strong>Learning Mask-aware CLIP Representations for Zero-Shot Segmentation</strong> <br>
+                Siyu Jiao, <strong>Yunchao Wei</strong>, Yaowei Wang, Yao Zhao, Humphrey Shi<br>
+                Neural Information Processing Systems (<strong>NeurIPS</strong>), 2023
+            </li>
+            <li>
+                <strong>RIO: A Benchmark for Reasoning Intention-Oriented Objects in Open Environments</strong> <br>
+                Mengxue Qu, Yu Wu, Wu Liu, Xiaodan Liang, Jingkuan Song, Yao Zhao, <strong>Yunchao Wei</strong><br>
+                Neural Information Processing Systems Datasets and Benchmarks Track (<strong>NeurIPS</strong>), 2023
+            </li>
+            <li>
                 <strong>
                     CLE Diffusion: Controllable Light Enhancement Diffusion Model
                 </strong> <br>              
